<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_snack" />

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descri_o" />

    <EditText
        android:id="@+id/editValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnAtualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atualizar" />

</LinearLayout>
