<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_snack"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descri_o"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/editValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor"
        android:inputType="numberDecimal"
        tools:ignore="Autofill,TextFields"
        />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar" />

</LinearLayout>
