<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descri_o"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textSize="14sp" />

    <!-- Botão para deletar o snack -->
    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/deletar_snack"
        android:src="@android:drawable/ic_delete"
        android:background="?attr/selectableItemBackgroundBorderless" />

</LinearLayout>
