<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/captura_de_tela_de_2024_09_19_07_54_42_removebg_preview">
    </ImageView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_allan_gabriel"
        android:textSize="20sp" />

    <TextView
        android:id="@id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_desenvolvido_para_a_atividade_final_de_desenvolvimento_para_dispositivos_m_veis" />

</LinearLayout>